--- a/part4/package.json
+++ b/part4/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "eslint": "^8.18.0",
     "nodemon": "^2.0.16"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.0"
   }
 }
