--- a/part4/package.json
+++ b/part4/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.18.0",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
