add cross-env as dependency

--- a/part4/package.json
+++ b/part4/package.json
@@ -11,6 +11,7 @@
   "author": "Matias Selin",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "jest": "^28.1.1",
     "nodemon": "^2.0.16"
