--- a/part4/package.json
+++ b/part4/package.json
@@ -14,7 +14,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.18.0",
     "jest": "^28.1.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
