add eslint-plugin-jest as dev dependency

--- a/part5/frontend/package.json
+++ b/part5/frontend/package.json
@@ -39,6 +39,7 @@
   },
   "proxy": "http://localhost:3003",
   "devDependencies": {
-    "eslint": "^8.18.0"
+    "eslint": "^8.18.0",
+    "eslint-plugin-jest": "^26.5.3"
   }
 }
