--- a/part5/frontend/package.json
+++ b/part5/frontend/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.1",
+    "cypress": "^10.2.0",
     "eslint": "^8.18.0",
     "eslint-plugin-jest": "^26.5.3"
   }
