add eslint cypress plugin and add it to config

--- a/part5/frontend/package.json
+++ b/part5/frontend/package.json
@@ -42,6 +42,7 @@
     "@testing-library/user-event": "^14.2.1",
     "cypress": "^10.2.0",
     "eslint": "^8.18.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.5.3"
   }
 }
