--- a/part7/part5/frontend/package.json
+++ b/part7/part5/frontend/package.json
@@ -42,7 +42,9 @@
     "@testing-library/user-event": "^14.2.1",
     "cypress": "^10.2.0",
     "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-jest": "^26.5.3"
+    "eslint-plugin-jest": "^26.5.3",
+    "prettier": "2.7.1"
   }
 }
