--- a/part7/part5/frontend/package.json
+++ b/part7/part5/frontend/package.json
@@ -45,6 +45,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^26.5.3",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "2.7.1"
   }
 }
