--- a/part9/exercise/package.json
+++ b/part9/exercise/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "calculateBmi": "ts-node bmiCalculator.ts"
   },
   "author": "",
   "license": "ISC",
@@ -13,3 +14,4 @@
     "typescript": "^4.9.4"
   }
 }
+
