--- a/part9/exercise/package.json
+++ b/part9/exercise/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
