--- a/part9/exercise/package.json
+++ b/part9/exercise/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
-    "dev": "ts-node-dev index.ts"
+    "dev": "ts-node-dev index.ts",
+    "start": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -21,3 +22,4 @@
     "express": "^4.18.2"
   }
 }
+
