--- a/part9/exercise/package.json
+++ b/part9/exercise/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
@@ -22,4 +25,3 @@
     "express": "^4.18.2"
   }
 }
-
