--- a/part9/patientor_backend/package.json
+++ b/part9/patientor_backend/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "eslint": "^8.33.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
