--- a/part9/patientor_backend/package.json
+++ b/part9/patientor_backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dev": "ts-node-dev index.js",
+    "lint": "eslint --ext .ts ."
   },
   "author": "",
   "license": "ISC",
