--- a/part9/patientor_backend/package.json
+++ b/part9/patientor_backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "dev": "ts-node-dev index.js",
+    "dev": "ts-node-dev index.ts",
     "lint": "eslint --ext .ts ."
   },
   "author": "",
