--- a/part9/patientor_frontend/package.json
+++ b/part9/patientor_frontend/package.json
@@ -45,6 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/react-router-dom": "^5.3.3"
   }
 }
-
